--- a/WIRECLOUD/WIDGETS & OPERATORS/Lista/docs/requirements.txt
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Lista/docs/requirements.txt
@@ -53,6 +53,8 @@ Requisitos especificos:
 5. Persistencia:
     - No procede.
 6. Formato de Datos a recibir:
+	{"id":"id","description":"description","calledVariations":null,"size":0} 
+	
 	[{"id": id_item_1, "description": text_description},
 	{"id": id_item_2, "description": text_description}
 	{"id": id_item_3, "description": text_description}]
