--- a/WIRECLOUD/WIDGETS & OPERATORS/Lista/docs/requirements.txt
+++ b/WIRECLOUD/WIDGETS & OPERATORS/Lista/docs/requirements.txt
@@ -1,13 +1,17 @@
 Tipo documento: Requisitos.
-Widget: IssuesInbox.
-Autor: sblanco
+Widget: DataList.
+Autor: ciniguez
 
 
 Requisitos generales:
     A. Al iniciar el widget se debe mostrar un mensaje para alertar al usuario de que debe comunicarse por wiring.
+    
     B. El widget debe poder recibir por WebSocket la lista de datos que serán listadas en pantalla a manera de columna.
+    
     C. Cada item de la lista desplegará en nombre del item
-    D. Se podrá seleccionar uno o varios items secuencciales.
+    
+    D. Se podrá seleccionar secuencialmente uno o varios items.
+    
     E. Al seleccionar un item de la lista, se debe enviar como salida la lista de items seleccionados, la entrega de datos debe ser realizada mediante WebSocket.
 
 Definiciones:
@@ -17,39 +21,40 @@ Definiciones:
 Requisitos especificos:
 
 1. Visuales:
+
     1.1. Al iniciar el widget se debe mostrar un mensaje para alertar al usuario de que debe hacer el wiring.
-    1.2. Si llega un item, se agrega el item a la lista.
+    
+    1.2. Si llega un item (por Websocket), se agrega el item a la lista.
+    
 
 2. Funcionalidad:
-    2.1. Secuencial:
-        2.1.1. Crear la lista de Issues.
-        2.1.2. Crear la lista de Workers.
-        2.1.3. Crear la tabla que muestra la información.
-        2.1.4. Mostrar un mensaje de alerta.
     
     2.2. Eventos:
-        2.2.1. Llega una Issue por el wiring:
-            Se agrega la Issue a la lista de Issues y se muestra en la tabla.
-        2.2.2. Llega un Worker por el wiring.
-            Se agrega el Worker a la lista de Workers y se muestra en cada una de las listas de Workers de cada Issue.
-        2.2.3. Click sobre una Issue.
-            Se envía la información de la Issue por wiring.
-        2.2.4. Selección de un Worker en una Issue.
-            Se envía la información del Worker por wiring.
-            Se construye y se envía la ruta por wiring.
+    
+        2.2.1. Llega una Item por el websocket:
+        
+            Se agrega el Item a la lista de Items y se muestra en la lista en pantalla.
+            
+        2.2.3. Check un Item.
+        
+            Si existe un Widget tipo Filtro, y está enlazado al widget DataList, se envía a traves de wiring, el id del item pulsado en DataList hacia Filter.
 
 
 3. Comunicacion:
+
     3.1. Entrada:
-        3.1.1. Issue. 
-        3.1.2. Worker. 
-    3.2 Salida: 
-        3.2.1. Route.
-        3.2.2. Worker. 
+    
+    - No aplica
+         
+    3.2 Salida:
+     
+        3.2.1. outputItem.- Id del item seleccionado
 
 4. Settings:
+
     - No procede.
 
 5. Persistencia:
+
     - No procede.
 
